Implementa CRUD de calendarizaciones
